--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 # ----------------------- #
 
 url: http://zackyap.github.com
-title: Zack Zack Zenith
-subtitle: Not so nonsensical gamer developer rant.
+title: Zack's Quest
+subtitle: Not so whimsical rants on a gamification startup's execution.
 author: Zack Yap -- @zackyap
 simple_search: http://google.com/search
 
