--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://zackyap.github.com
 title: Zack's Quest
-subtitle: Not so whimsical rants on a gamification startup's execution.
+subtitle: Not so whimsical rants on tech, design, gamification and startups.
 author: Zack Yap -- @zackyap
 simple_search: http://google.com/search
 
