updated blog name

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # ----------------------- #
 
 url: http://zackyap.github.com
-title: Zack's Quest
+title: Zack's Questlog
 subtitle: Not so whimsical rants of my journey in tech, design, gamification and startups.
 author: Zack Yap -- @zackyap
 simple_search: http://google.com/search
